--- a/AdoptionSpringBootJPA/src/main/resources/application.properties
+++ b/AdoptionSpringBootJPA/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=AdoptionSpringBootJPA
+server.port=8081
 
 logging.level.org.springframework.boot.autoconfigure=INFO
-logging.level.org.springframework = DEBUG
+logging.level.org.springframework = INFO
 
 #spring.profiles.active = dev
 #spring.profiles.active = h2, prod
 #spring.profiles.active = mysql, prod
 spring.profiles.active = postgres, prod
+#spring.profiles.active = jdbc
 ################################################################
 
 #EntityManager hack.  Only for web environments.
@@ -24,13 +26,13 @@ spring.jpa.open-in-view=false
 #Does Hibernate generate the DDL (false for no)
 #If this is not set to false, Hibernate may overwrite
 #the work of schema.sql and data.sql
-#spring.jpa.generate-ddl=true
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=false
 #If Hibernate, then a further switch is
 # available to customize how Hibernate works
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 #################End Hibernate######################
 
 ###########################DB properties##############################
@@ -43,8 +45,9 @@ spring.jpa.hibernate.ddl-auto=none
 # above property name has been changed to:
 #spring.sql.init.platform=h2
 
-
+#Moved to application-postgres.properties
 #also have to turn this on for spring,
+#Tell Spring not to create the database
 #Choices are 'embedded' (the default),
 #'always' and 'never'.
 #Choose 'never' if Hibernate is making the schema
@@ -52,13 +55,14 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.datasource.initialization-mode=never
 #Note that sometime after version 2.6.6 the
 # above property name has been changed to:
-spring.sql.init.mode=embedded
-#spring.sql.init.mode=never
+#spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 #properties to make hibernate show us what it's doing
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight.sql=true
 
 # Generate and log statistics
 #spring.jpa.properties.hibernate.generate_statistics=true
