Week 12 and 13 Homework: Updated properties to ddl auto generate and then populate postgres db from data.sql file

--- a/AdoptionSpringBootJPA/src/main/resources/application-postgres.properties
+++ b/AdoptionSpringBootJPA/src/main/resources/application-postgres.properties
@@ -8,10 +8,17 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #Tell Spring not to create the database
 #Choice are 'never', 'embedded' and 'always'
 #spring.datasource.initialization-mode=always
-spring.sql.init.mode=never
+spring.sql.init.mode=always
+
+#If we still want to have both Hibernate automatic schema
+#generation in conjugation with script-based schema creation and data population
+#This will ensure, that after Hibernate schema creation is performed
+# hen additionally schema.sql is read for any additional schema changes
+#and data.sql is executed to populate the database.
+spring.jpa.defer-datasource-initialization=true
 
 #spring.sql.init.schema-locations = classpath:/sql/postgres/1-adoptapp-postgres_schema.sql
-#spring.sql.init.data-locations = classpath:/sql/postgres/2-adoptapp-postgres_data.sql
+spring.sql.init.data-locations = classpath:/sql/postgres/2-adoptapp-postgres_data.sql
 
 ttl.sql.schema-file = /sql/postgres/1-adoptapp-postgres_schema.sql
 ttl.sql.data-file = /sql/postgres/2-adoptapp-postgres_data.sql
