Pet id should default to 0 for JPA

--- a/AdoptionSpringBootJPA/src/main/resources/application-postgres.properties
+++ b/AdoptionSpringBootJPA/src/main/resources/application-postgres.properties
@@ -3,7 +3,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5433/adoptapp
 spring.datasource.username=larku
 spring.datasource.password=${DB_PASSWORD}
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Tell Spring not to create the database
 #Choice are 'never', 'embedded' and 'always'
@@ -13,10 +13,10 @@ spring.sql.init.mode=never
 #If we still want to have both Hibernate automatic schema
 #generation in conjugation with script-based schema creation and data population
 #This will ensure, that after Hibernate schema creation is performed
-# hen additionally schema.sql is read for any additional schema changes
+#Then additionally schema.sql is read for any additional schema changes
 #and data.sql is executed to populate the database.
 #spring.jpa.defer-datasource-initialization=true
-spring.jpa.defer-datasource-initialization=false
+#spring.jpa.defer-datasource-initialization=false
 
 #spring.sql.init.schema-locations = classpath:/sql/postgres/1-adoptapp-postgres_schema.sql
 #spring.sql.init.data-locations = classpath:/sql/postgres/2-adoptapp-postgres_data.sql
